remove codesmell